[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/chat-gpt/core/http.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/chat-gpt/ui/generate_images/main_panel.gd" type="Script" id=3]
[ext_resource path="res://addons/chat-gpt/ui/generate_images/generated_picture.tscn" type="PackedScene" id=4]

[node name="GeneratePicture" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 300.0 ],
"_edit_vertical_guides_": [ 100.0, 925.0 ]
}

[node name="HTTP" parent="." instance=ExtResource( 2 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Prompt_label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 14.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 1004.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PromptEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HSplitContainer"]
margin_right = 909.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "An Impressionist oil painting of sunflowers in a purple vase..."

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HSplitContainer"]
margin_left = 913.0
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "Generate"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 1004.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="FirstPicture" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_right = 236.0
margin_bottom = 534.0

[node name="SecondPicture" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 256.0
margin_right = 492.0
margin_bottom = 534.0

[node name="ThirdPicture" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 512.0
margin_right = 748.0
margin_bottom = 534.0

[node name="FourthPicture" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 768.0
margin_right = 1004.0
margin_bottom = 534.0

[node name="PreviewDialog" type="Popup" parent="."]
visible = true
anchor_left = 0.133789
anchor_top = 0.0833333
anchor_right = 0.866211
anchor_bottom = 0.916667

[node name="ColorRect" type="ColorRect" parent="PreviewDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.1 )

[node name="Control" type="Control" parent="PreviewDialog"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Preview" type="MarginContainer" parent="PreviewDialog/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="TextureRect" type="TextureRect" parent="PreviewDialog/Control/Preview"]
margin_left = 40.0
margin_top = 40.0
margin_right = 710.0
margin_bottom = 460.0
expand = true
stretch_mode = 6

[node name="Previous" type="Button" parent="PreviewDialog/Control"]
anchor_top = 0.46
anchor_right = 0.0533333
anchor_bottom = 0.54
focus_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Next" type="Button" parent="PreviewDialog/Control"]
anchor_left = 0.946667
anchor_top = 0.46
anchor_right = 1.0
anchor_bottom = 0.54
focus_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PreviewDialog/Control"]
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 0.4
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GenerateVariation" type="Button" parent="PreviewDialog/Control/VBoxContainer"]
margin_right = 150.0
margin_bottom = 20.0
focus_mode = 1
size_flags_horizontal = 3
text = "Generate Variation"

[node name="SaveImage" type="Button" parent="PreviewDialog/Control/VBoxContainer"]
margin_top = 30.0
margin_right = 150.0
margin_bottom = 50.0
focus_mode = 1
size_flags_horizontal = 3
text = "Save Image As..."

[node name="SaveImageDialog" type="FileDialog" parent="."]
visible = true
margin_right = 315.0
margin_bottom = 130.0
window_title = "Save Image"
mode_overrides_title = false
access = 2
filters = PoolStringArray( "*.png" )

[connection signal="image_downloaded" from="HTTP" to="." method="_on_HTTP_image_downloaded"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HSplitContainer/PromptEdit" to="." method="_on_PromtEdit_text_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HSplitContainer/Button" to="." method="_on_Send_Button_pressed"]
[connection signal="gui_input" from="PreviewDialog/Control" to="." method="_on_Close_gui_input"]
[connection signal="pressed" from="PreviewDialog/Control/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="PreviewDialog/Control/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="PreviewDialog/Control/VBoxContainer/GenerateVariation" to="." method="_on_GenerateVariation_pressed"]
[connection signal="pressed" from="PreviewDialog/Control/VBoxContainer/SaveImage" to="." method="_on_SaveImage_pressed"]
[connection signal="file_selected" from="SaveImageDialog" to="." method="_on_SaveImageDialog_file_selected"]
